--- a/station/.config/i3/config
+++ b/station/.config/i3/config
@@ -12,28 +12,33 @@
 set $mod Mod4
 set $alt Mod1
 
-exec_always --no-startup-id /home/jazz/.config/polybar/launch.sh &
+exec --no-startup-id /home/jazz/.config/i3/startup.sh
 exec_always --no-startup-id dunst &
-#exec --no-startup-id xrandr --output eDP1 --dpi 140 --mode 1920x1080 --output HDMI1 --off --output DP2-1 --mode 1920x1080 --same-as eDP1 --output DP2-2 --off
 exec --no-startup-id xset s off
 exec --no-startup-id xset dpms 0 0 0
-exec --no-startup-id xinput set-prop 11 280 1 &
 exec --no-startup-id redshift
 exec_always --no-startup-id setxkbmap pl &
-exec --no-startup-id /home/jazz/.config/i3/startup.sh
-bindsym Print exec --no-startup-id scrot '/home/jazz/Pictures/Screenshots/ss_%Y-%m-%d_%H:%M:%S.png'
-bindsym $mod+Print exec --no-startup-id scrot -u '/home/jazz/Pictures/Screenshots/ss_%Y-%m-%d_%H:%M:%S.png'
-bindsym control+Print exec --no-startup-id scrot -m '/home/jazz/Pictures/Screenshots/ss_%Y-%m-%d_%H:%M:%S.png'
+exec_always --no-startup-id /home/jazz/.config/polybar/launch.sh &
+bindsym Print exec --no-startup-id scrot '/home/jazz/Pictures/Screenshots/ss_%Y-%m-%d_%H-%M-%S.png'
+bindsym $mod+Print exec --no-startup-id scrot -u '/home/jazz/Pictures/Screenshots/ss_%Y-%m-%d_%H-%M-%S.png'
+bindsym control+Print exec --no-startup-id scrot -m '/home/jazz/Pictures/Screenshots/ss_%Y-%m-%d_%H-%M-%S.png'
 bindsym $mod+p exec --no-startup-id mpc toggle
 bindsym $mod+m exec --no-startup-id /home/jazz/.config/i3/monitor.sh
-bindsym $mod+comma exec --no-startup-id pactl set-sink-volume alsa_output.pci-0000_09_00.3.analog-stereo -2%; exec --no-startup-id pactl set-sink-volume alsa_output.usb-Creative_Technology_Ltd_Sound_Blaster_Play__3_00080951-00.analog-stereo -2%
-bindsym $mod+period exec --no-startup-id pactl set-sink-volume alsa_output.pci-0000_09_00.3.analog-stereo +2%; exec --no-startup-id pactl set-sink-volume alsa_output.usb-Creative_Technology_Ltd_Sound_Blaster_Play__3_00080951-00.analog-stereo +2%
-bindsym $mod+c exec xclip -i /dev/null
+bindsym $mod+n exec --no-startup-id /home/jazz/.config/i3/dualscreen.sh
+bindsym $mod+comma exec --no-startup-id pactl set-sink-volume alsa_output.pci-0000_09_00.3.analog-stereo -2%
+#; exec --no-startup-id pactl set-sink-volume alsa_output.usb-Creative_Technology_Ltd_Sound_Blaster_Play__3_00080951-00.analog-stereo -2%
+bindsym $mod+period exec --no-startup-id pactl set-sink-volume alsa_output.pci-0000_09_00.3.analog-stereo +2%
+#; exec --no-startup-id pactl set-sink-volume alsa_output.usb-Creative_Technology_Ltd_Sound_Blaster_Play__3_00080951-00.analog-stereo +2%
+bindsym Scroll_Lock exec --no-startup-id /home/jazz/.config/i3/switch_kbdmap.sh
+bindsym $mod+c exec --no-startup-id xclip -i /dev/null
+bindsym $mod+b exec feh --full-screen /home/jazz/Pictures/black.jpg
+bindsym $mod+u exec --no-startup-id /home/jazz/cloud/upload_sync_notify.sh
+bindsym $mod+i exec --no-startup-id /home/jazz/cloud/download_sync_notify.sh
 
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
-font pango:monospace 8
+font pango:monospace 9
 
 # This font is widely installed, provides lots of unicode glyphs, right-to-left
 # text rendering and scalability on retina/hidpi displays (thanks to pango).
@@ -213,7 +218,24 @@ bindsym $mod+z exec --no-startup-id wallschctl lock
 bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume 0 +5% #increase sound volume
 bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume 0 -5% #decrease sound volume
 bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute 0 toggle # mute sound
-bindsym XF86AudioPlay exec --no-startup-id playerctl play
-bindsym XF86AudioPause exec --no-startup-id playerctl pause
-bindsym XF86AudioNext exec --no-startup-id playerctl next
-bindsym XF86AudioPrev exec --no-startup-id playerctl previous
+bindsym XF86AudioPlay exec --no-startup-id "playerctl play; mpc toggle"
+bindsym XF86AudioPause exec --no-startup-id "playerctl pause; mpc pause"
+bindsym XF86AudioNext exec --no-startup-id "playerctl next; mpc next"
+bindsym XF86AudioPrev exec --no-startup-id "playerctl previous; mpc prev"
+bindsym XF86AudioStop exec --no-startup-id "playerctl stop; mpc stop"
+
+# bind workspaces to different monitors
+
+set $monitor_tall DVI-D-1
+set $monitor_middle DisplayPort-0
+set $monitor_right DVI-D-0
+
+workspace $ws1 output $monitor_tall
+workspace $ws2 output $monitor_tall
+workspace $ws3 output $monitor_middle
+workspace $ws4 output $monitor_middle
+workspace $ws5 output $monitor_middle
+workspace $ws6 output $monitor_middle
+workspace $ws7 output $monitor_right
+workspace $ws8 output $monitor_right
+workspace $ws9 output $monitor_right
